--- a/Mozilla-splash-page/index.html
+++ b/Mozilla-splash-page/index.html
@@ -97,16 +97,17 @@
     </style>
   </head>
   <body>
+   
     <header>
-      <h1>Mozilla</h1>
-      <!-- insert <img> element, link to the small
-          version of the Firefox logo -->
-
+      <h1> Mozilla</h1>
+      <img src="firefox_logo-only_RGB_120.png"
     </header>
+      
+
 
     <main>
       <article>
-        <!-- insert iframe from youtube -->
+        <iframe width="400" height="225" src="https://www.youtube.com/embed/ojcNcvb1olg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <h2>Rocking the free web</h2>
 
@@ -118,9 +119,15 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
+          <img srcset= "firefox_logo-only_RGB_120.png 120w,
+                        firefox_logo-only_RGB_400.png 400w"
+                  sizes="(max-width: 500px) 120px,
+                  400px"
+                  src"firefox_logo-only_RGB.png">
         </a>
         <a href="https://www.mozilla.org/">
+          <img srcset="mozilla-dinosaur-head-120.png 120w
+                      mozilla-dinosaur
           <img>
         </a>
         <a href="https://addons.mozilla.org/">
@@ -134,6 +141,7 @@
 
       <div class="red-panda">
         <!-- insert picture element -->
+        <img src="red-panda.jpg"
       </div>
 
     </main>
