--- a/Mozilla-splash-page/index.html
+++ b/Mozilla-splash-page/index.html
@@ -97,18 +97,14 @@
     </style>
   </head>
   <body>
-   
     <header>
-      <h1> Mozilla</h1>
-      <img src="firefox_logo-only_RGB_120.png"
+      <h1>Mozilla</h1>
+      <img src="firefox-logo120.png" alt="Firefox logo">
     </header>
-      
-
 
     <main>
       <article>
-        <iframe width="400" height="225" src="https://www.youtube.com/embed/ojcNcvb1olg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+        <iframe width="400" height="225" src="https://www.youtube.com/embed/ojcNcvb1olg" frameborder="0" allowfullscreen></iframe>
         <h2>Rocking the free web</h2>
 
         <p>Mozilla are a global community of technologists, thinkers, and builders, working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
@@ -117,31 +113,40 @@
       </article>
 
       <div class="further-info">
-        <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img srcset= "firefox_logo-only_RGB_120.png 120w,
-                        firefox_logo-only_RGB_400.png 400w"
-                  sizes="(max-width: 500px) 120px,
-                  400px"
-                  src"firefox_logo-only_RGB.png">
+          <img srcset="firefox-logo120.png 120w,
+                       firefox-logo400.png 400w"
+               sizes="(max-width: 500px) 120px,
+                      400px"
+               src="firefox-logo400.png" alt="Download Firefox">
         </a>
         <a href="https://www.mozilla.org/">
-          <img srcset="mozilla-dinosaur-head-120.png 120w
-                      mozilla-dinosaur
-          <img>
+          <img srcset="mozilla-dinosaur120.png 120w,
+                       mozilla-dinosaur400.png 400w"
+               sizes="(max-width: 500px) 120px,
+                      400px"
+               src="mozilla-dinosaur400.png" alt="Learn more about Mozilla">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img srcset="firefox-addons120.jpg 120w,
+                       firefox-addons400.jpg 400w"
+               sizes="(max-width: 500px) 120px,
+                      400px"
+               src="firefox-addons400.jpg" alt="Customize Firefox with add-ons">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="mdn.svg" alt="Learn web development with MDN">
         </a>
         <div class="clearfix"></div>
       </div>
 
       <div class="red-panda">
-        <!-- insert picture element -->
-        <img src="red-panda.jpg"
+
+
+        <picture>
+          <source media="(max-width: 600px)" srcset="red-panda-portrait-small.jpg">
+          <img src="red-panda-landscape.jpg" alt="a red panda">
+        </picture>
       </div>
 
     </main>
