--- a/Mozilla-splash-page/index.html
+++ b/Mozilla-splash-page/index.html
@@ -99,7 +99,7 @@
   <body>
     <header>
       <h1>Mozilla</h1>
-      <img src="firefox-logo120.png" alt="Firefox logo">
+      <img src="firefox_logo-only_RGB_120.png" alt="Firefox logo">
     </header>
 
     <main>
@@ -114,25 +114,25 @@
 
       <div class="further-info">
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img srcset="firefox-logo120.png 120w,
-                       firefox-logo400.png 400w"
+          <img srcset="firefox_logo-only_RGB_120.png 120w,
+                       firefox_logo-only_RGB_400.png 400w"
                sizes="(max-width: 500px) 120px,
                       400px"
-               src="firefox-logo400.png" alt="Download Firefox">
+               src="firefox_logo-only_RGB_400.png" alt="Download Firefox">
         </a>
         <a href="https://www.mozilla.org/">
-          <img srcset="mozilla-dinosaur120.png 120w,
-                       mozilla-dinosaur400.png 400w"
+          <img srcset="mozilla-dinosaur-head-120.png 120w,
+                       mozilla-dinosaur-head-400.png 400w"
                sizes="(max-width: 500px) 120px,
                       400px"
-               src="mozilla-dinosaur400.png" alt="Learn more about Mozilla">
+               src="mozilla-dinosaur-head-400.png" alt="Learn more about Mozilla">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img srcset="firefox-addons120.jpg 120w,
-                       firefox-addons400.jpg 400w"
+          <img srcset="firefox-addons-120.jpg 120w,
+                       firefox-addons-400.jpg 400w"
                sizes="(max-width: 500px) 120px,
                       400px"
-               src="firefox-addons400.jpg" alt="Customize Firefox with add-ons">
+               src="firefox-addons-400.jpg" alt="Customize Firefox with add-ons">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
           <img src="mdn.svg" alt="Learn web development with MDN">
@@ -145,7 +145,7 @@
 
         <picture>
           <source media="(max-width: 600px)" srcset="red-panda-portrait-small.jpg">
-          <img src="red-panda-landscape.jpg" alt="a red panda">
+          <img src="red-panda.jpg" alt="a red panda">
         </picture>
       </div>
 
